$Id$

2012-05-27 Edwin Velds <e.velds@gmail.com>
	* Cursor follows pc/breakpoints/pgup/pgdn.

2012-05-22 Edwin Velds <e.velds@gmail.com>
	* Added display of rom blocks

2012-05-20 Edwin Velds <e.velds@gmail.com>
	* Added recent sessions files to the File menu
	* Monitor symbol files for changes and immediately ask the user
	  if they need to be reloaded.

2012-05-19 Edwin Velds <e.velds@gmail.com>
	* Added a goto dialog for disasm view navigation

2012-05-19 Edwin Velds <e.velds@gmail.com>
	* Added ability to add breakpoints by label

2011-03-06 Edwin Velds <e.velds@gmail.com>
	* Added support for step_back
	* Added a workaround for step_over leaving a breakpoint

2009-06-25 David Heremans <david.heremans@gnu-linux.net>
	* The VDP register viewer will now indicate  the bits which 
	  must be set according to the VDP technical data book.
	* Ignore those bits when calculating the table addresses.

2009-05-09 David Heremans <david.heremans@gnu-linux.net>
	* Added support for symbol files generated by SJASM

2008-11-01 David Heremans <david.heremans@gnu-linux.net>
	* Launching of command possible.
	* Indication of used registers for given command.

2008-10-30 David Heremans <david.heremans@gnu-linux.net>
	* Added indication of used bits in ARG register

2008-10-29 David Heremans <david.heremans@gnu-linux.net>
	* First steps towards VDP Command registers dialog.

2008-10-22 David Heremans <david.heremans@gnu-linux.net>
	* More (V9958) registers explained
	* Started to correctly differentiate between TMS99x8,V9938 and V9958
	  in decoding table addresses and function of some bits.

2008-10-17 David Heremans <david.heremans@gnu-linux.net>
	* Added the SimpleHexRequest and SimpleHexRequestUser:
	  An attempt to simplify the request of openMSX debugable data

2008-10-13 David Heremans <david.heremans@gnu-linux.net>
	* Check if this it is {physical VRAM} vs the older {VRAM}
	* More registerViewer code

2008-10-13 Edwin Velds <e.velds@gmail.com>